<resources>
    <string name="app_name">Universo Rol</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--String botones, editText, TextView-->
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registro_usuario">Nombre de usuario</string>
    <string name="repit_contrasenia">Repite la contraseña</string>
    <string name="completar_registro">Registrarse</string>
    <string name="nombre_juego">Nombre del juego</string>
    <string name="categoria_juego">Categoria del juego</string>
    <string name="precio_juego">Precio del juego</string>
    <string name="stock_juego">Stock del juego</string>
    <string name="crear_juego">Añadir el juego a la tienda</string>
    <string name="nombre_evento">Título del evento</string>
    <string name="precio_evento">Precio</string>
    <string name="aforo_maximo">Aforo máximo</string>
    <string name="fecha_evento">Fecha del evento</string>
    <string name="añadir_evento">Crear el evento</string>
    <string name="modificar_juego">Modificar el juego</string>
    <string name="disponibilidad_juego">Disponibilidad del juego</string>
    <string name="precio_minimo">Precio mínimo sin establecer</string>
    <string name="precio_max">Precio máximo sin establecer</string>
    <string name="eventos_gratuitos">Eventos gratuitos</string>
    <string name="apuntarse_evento">Apuntarse al evento</string>
    <string name="comprar_juego">Realizar pedido ya!</string>
    <string name="ver_info_cliente">Ver información del cliente</string>
    <string name="ver_info_juego">Ver información del juego</string>
    <string name="confirmar_pedido">Confirmación del pedido</string>
    <string name="pedido_pregunta_confirmacion">Vas a confirmar que el pedido está preparado, estás seguro?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="divisa">Indique la divisa que quiere:</string>
    <string name="modo_noche">Activar modo nocturno: </string>
    <string name="editar">Editar</string>
    <string name="ver_usuarios">Inscritos</string>
    <string name="cambiar_vista"> Cambiar la vista: </string>
    <string name="categorias">Categorias: </string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>

    <!--Strings de cabeceras, menus, etc.-->
    <string name="frag_login">Login</string>
    <string name="frag_register">Registro</string>
    <string name="title_activity_usuario_actividad">UsuarioActividad</string>
    <string name="lista_juegos">Juegos</string>
    <string name="lista_eventos">Eventos</string>
    <string name="lista_pedidos">Pedidos</string>
    <string name="eventos_disponibles">Eventos disponibles</string>
    <string name="eventos_suscritos">Mis eventos</string>
    <string name="configuracion">Configuración</string>
    <string name="logout">Cerrar sesión</string>
    <string name="historial_pedidos">Historial de pedidos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin_actividad">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registro_email">Email</string>
</resources>