<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listaJuegosUsuario"
            android:icon="@drawable/icono_juego"
            android:title="@string/lista_juegos" />
        <item
            android:id="@+id/eventosDisponibles"
            android:icon="@drawable/event_24px"
            android:title="@string/eventos_disponibles" />

        <item
            android:id="@+id/eventosApuntado"
            android:icon="@drawable/event_available_24px"
            android:title="@string/eventos_suscritos" />

        <item
            android:id="@+id/historialPedidos"
            android:icon="@drawable/box_pedidos"
            android:title="@string/historial_pedidos" />

    </group>
</menu>