<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.DialogModJuego">

    <ImageView
        android:id="@+id/iv_foto_juego"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_juego">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_juego"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout14"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout14"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoria_juego"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout15"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout15"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio_juego"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout16"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout16"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_juego"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_modificar"
        style="@style/RobotoButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modificar_juego"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout17"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout17"
        app:layout_constraintTop_toBottomOf="@+id/sw_disponibilidad" />

    <Switch
        android:id="@+id/sw_disponibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/disponibilidad_juego"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout17"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout17"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout17" />
</androidx.constraintlayout.widget.ConstraintLayout>