<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".dialog.DialogModEvento">

    <ImageView
        android:id="@+id/iv_foto_evento"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:src="@drawable/add_a_photo_24px"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_evento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_evento"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout14"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout14"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio_evento"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout15"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout15"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_aforo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aforo_maximo"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout16"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout16"
        app:layout_constraintTop_toBottomOf="@+id/tv_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/fecha_evento"
            android:inputType="datetime" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_modificar"
        style="@style/RobotoButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/modificar_juego"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout17"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout17"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout17" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout16"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout16" />
</androidx.constraintlayout.widget.ConstraintLayout>